Install cutr separately

--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -162,6 +162,11 @@ jobs:
           remotes::install_cran("rmarkdown")
         shell: Rscript {0}
 
+      - name: Install cutr
+        run: |
+          remotes::install_github("moodymudskipper/cutr")
+        shell: Rscript {0}
+
       - name: Install dependencies pass 1
         run: |
           ## Try installing the package dependencies in steps. First the local
