--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -24,7 +24,7 @@ on:
   push:
     branches:
       - master
-      - {ts}_test_test_test
+      - '{ts}_test_test_test'
   pull_request:
     branches:
       - master
