--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -28,7 +28,7 @@ on:
     branches:
       - master
 
-name: R-CMD-check-bioc
+name: check-bioc
 
 ## These environment variables control whether to run GHA code later on that is
 ## specific to testthat, covr, and pkgdown.
@@ -43,6 +43,7 @@ env:
   run_pkgdown: 'false'
   has_RUnit: 'false'
   cache-version: 'cache-v1'
+  run_docker: 'false'
 
 jobs:
   build-check:
@@ -157,11 +158,6 @@ jobs:
           BiocManager::install(version = "${{ matrix.config.bioc }}", ask = FALSE)
         shell: Rscript {0}
 
-      - name: Install rmarkdown
-        run: |
-          remotes::install_cran("rmarkdown")
-        shell: Rscript {0}
-
       - name: Install cutr
         run: |
           remotes::install_github("moodymudskipper/cutr")
@@ -178,7 +174,7 @@ jobs:
 
           ## Pass #1 at installing dependencies
           message(paste('****', Sys.time(), 'pass number 1 at installing dependencies: local dependencies ****'))
-          remotes::install_local(dependencies = NA, repos = BiocManager::repositories(), build_vignettes = FALSE, upgrade = FALSE)
+          remotes::install_local(dependencies = TRUE, repos = BiocManager::repositories(), build_vignettes = TRUE, upgrade = TRUE)
         continue-on-error: true
         shell: Rscript {0}
 
@@ -186,10 +182,10 @@ jobs:
         run: |
           ## Pass #2 at installing dependencies
           message(paste('****', Sys.time(), 'pass number 2 at installing dependencies: any remaining dependencies ****'))
-          remotes::install_local(dependencies = NA, repos = BiocManager::repositories(), build_vignettes = FALSE, upgrade = FALSE)
+          remotes::install_local(dependencies = TRUE, repos = BiocManager::repositories(), build_vignettes = TRUE, upgrade = TRUE)
 
           ## For running the checks
-          message(paste('****', Sys.time(), 'installing rcmdcheck and BiocCheck ****'))
+          message(paste('****', Sys.time(), 'installing rcmdcheck ****'))
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
 
@@ -270,3 +266,13 @@ jobs:
         with:
           name: ${{ runner.os }}-biocversion-RELEASE_3_12-r-4.0-results
           path: check
+
+      - uses: docker/build-push-action@v1
+        if: "!contains(github.event.head_commit.message, '/nodocker') && env.run_docker == 'true' && runner.os == 'Linux' "
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: cambridgecentreforproteomics/camprotr
+          tag_with_ref: true
+          tag_with_sha: true
+          tags: latest
